--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+html, body { overflow-x: hidden; }
 body {
   color: var(--mainBlack);
   background: var(--mainWhite);
