--- a/main.css
+++ b/main.css
@@ -13,7 +13,11 @@
   padding: 0;
   box-sizing: border-box;
 }
-html, body { overflow-x: hidden; }
+html, body { 
+  overflow-x: hidden; 
+  width: 100%;
+  height: 100%;
+}
 body {
   color: var(--mainBlack);
   background: var(--mainWhite);
@@ -206,7 +210,7 @@ body {
     min-width: 450px;
   }
 }
-
+/* Hide Cart */
 .close-cart {
   font-size: 1.7rem;
   cursor: pointer;
