--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@
     display: flex;
     align-items: center;
 }
-
 .menu-overlay .fa-window-close {
     font-size: 1.5rem;
     cursor: pointer;
@@ -51,28 +50,20 @@
 .fa-bars {
     cursor: pointer;
 }
-
 .menu-content, menu span {
     display: grid;
     justify-content: center;
 }
-
 .menu-overlay ul { list-style-type: none; }
-
 .menu-overlay li { margin: 1rem 0; }
-
 .menu-overlay a {
     text-decoration: none;
     color: var(--mainBlack);
     font-size: 1.5rem;
     transition: var(--mainTransition);
 }
-
 .menu-overlay a:hover { color: var(--primaryColor);}
 /* End Of Side Menu Section */
-
-.flex {
-    display: flex;
-}
+.flex { display: flex; }
 
 
